2017-05-24  Andreas Skyman  <andreas.skyman@molflow.com>

	* Build_scripts/docker/complete/Dockerfile: Updated FROM version

2017-05-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m: lat_true and lon_true are now set to
	R.ATM.LAT and R.ATM.LON, to be consistent with extraction of a
	priori atmosphere. L2.Latitude/Longitude now set using nearest
	interpolation, instead pchip. Slightly poorer inside range covered
	by spectra, but works much better in extrapolation zone.

2017-05-03  Andreas Skyman  <andreas.skyman@molflow.com>

	* Build_scripts/batch_build.sh: Created batch building script

	* Build_scripts/docker/complete/Dockerfile: Updated FROM version

2017-05-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_y.m: reshape of y with do_sensor failed.
	It seems that L1B.Spectrum has been transposed since the code was
	written. Anyhow, code has been changed to be more stable.

2017-03-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/l1b_filter.m: Added handling of Q.QFILT_FCORR.

2017-03-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_y.m: Output F had wrong size for ~do_sensor.

	* Mscripts_database/l1b_homemade.m: Orientation of GPSpos field
	was wrong.

2017-02-22  Andreas Skyman   <andreas.skyman@molflow.com>

	* Build_scripts/runscript.m: Will retry maximum 5 times if webread
	or webwrite fails.

2017-01-30  Jimmy Petersson   <jimmy@molflow.com>

	* snapshot/*: Remove outdated snapshot build script and move
	add_jobs application to its own repo.

2017-01-16  Jimmy Petersson   <jimmy@molflow.com>

	* Mscripts_atmlab/mat2col.m: Add missing function

2017-01-12  Jimmy Petersson   <jimmy@molflow.com>

	* Build_scripts/runscript.m: Add timeout to post request.
	* snapshot/add_jobs.py: Adapt to odin api v5.

2016-12-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_qsystem/q2_version.m: Now set to qsmr-beta-8.
